# SSTDart-5780-01-goup-project

./: .gitignore  CMakeLists.txt  Makefile  README.md  flake.nix  platformio.ini
Inc/: dac.h  main.h  supportAndInit.h
Src/: dac.c  main.c  stm32f0xx_it.c  supportAndInit.c
scripts/: plot_sweep.py
src/: CMakeLists.txt  main.c
